RESOLVED FIXED271074
[UnifiedPDF] Data detector page overlay tiles should not be repainted when there is no active highlight
https://bugs.webkit.org/show_bug.cgi?id=271074
Summary [UnifiedPDF] Data detector page overlay tiles should not be repainted when th...
Abrar Rahman Protyasha
Reported 2024-03-15 12:58:22 PDT
Currently, we unconditionally call PageOverlay::setNeedsDisplay() whenever we scroll the PDF plugin. This is incredibly inefficient because we're repainting all the tiles even when there is no need to repaint. Let's be more prudent and teach the data detector overlay controller to better reason about when a repaint is necessary.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-15 12:58:31 PDT
Abrar Rahman Protyasha
Comment 2 2024-03-15 13:04:29 PDT
EWS
Comment 3 2024-03-15 14:28:54 PDT
Committed 276200@main (3aad301970ab): <https://commits.webkit.org/276200@main> Reviewed commits have been landed. Closing PR #25965 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.